# ros-odrive

./: .gitignore  CMakeLists.txt  new.py  package.xml  setup.cfg  setup.py
config/: newton.yaml
odrive/: __init__.py  can_interface.py  device.py  device_manager.py  error.py  exception.py  logger.py  odrive_node.py  types.py
test/: discovery.py
