<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>n_odrive</name>
  <version>0.0.0</version>
  <description>Newton's implementation of CAN communication to the ODrives</description>
  <maintainer email="the.newton.capstone@gmail.com">TheNewtonCapstone</maintainer>
  <license>GPL v3.0</license>

  <author email="shamiivan@gmail.com">Shami Ivan</author>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
